--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">ChoreIt</string>
     <string name="action_settings">Settings</string>
+    <string name="tab_text_1">Chores</string>
+    <string name="tab_text_2">Groups</string>
+    <string name="tab_text_3">Contacts</string>
 </resources>
